[metadata]
name = molecular_orbitals
version = 0.1.0
author = Daniil Krizhanovskyi
author_email = daniil.krizhanovskyi@hotmail.com
description = A Python library for modeling molecular orbitals and analyzing chemical reactions using quantum chemistry methods.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dkrizhanovskyi/molecular_orbitals
project_urls =
    Bug Tracker = https://github.com/dkrizhanovskyi/molecular_orbitals/issues
    Documentation = https://molecular_orbitals.readthedocs.io
    Source Code = https://github.com/dkrizhanovskyi/molecular_orbitals
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires =
    numpy
    matplotlib
    click
    psi4

[options.entry_points]
console_scripts =
    molecular_orbitals = cli:cli

[options.extras_require]
dev =
    pytest
    sphinx
    black
    flake8

[coverage:run]
branch = True
source =
    molecular_orbitals
